# RMDB-TUI-Rust-version

./: Cargo.toml  README.md  run.sh
src/: lib.rs  main.rs
src/data/: api_client.rs  capabilities.rs  distribution.rs  mod.rs
src/deployment/: host.rs  installer.rs  logger.rs  lxc.rs  mod.rs  vm.rs
src/gui/: desktop_client.rs  gtk_installer.rs  mod.rs  tui_fallback.rs
src/pres/: executor.rs  input.rs  install_menu.rs  loading.rs  main_app.rs  main_menu.rs  mod.rs  sudo.rs  terminal.rs  ui.rs  utils.rs
src/themes/: mod.rs
